<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/e167595f7f68887c383b73d7f5082bfa">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/sansita_swashed_bold"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="32dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/amount"
            android:textColor="#2196F3"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:digits="1234567890"
            android:inputType="phone"
            android:hint="@string/amountHint"
            android:textColor="@color/black"
            android:textColorHint="@color/white"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/pax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/noOfpax"
            android:textColor="#2196F3"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editPax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:digits="1234567890"
            android:hint="@string/noOfpaxHint"
            android:inputType="phone"
            android:textColor="@color/black"
            android:textColorHint="@color/white"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ToggleButton
                android:id="@+id/SVS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textOn="@string/svsEnabled"
                android:textOff="@string/svsDisabled"/>

            <ToggleButton
                android:id="@+id/GST"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:textOff="@string/gstDisabled"
                android:textOn="@string/gstEnabled" />
        </LinearLayout>

        <TextView
            android:id="@+id/discount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="23dp"
            android:fontFamily="@font/quicksand_bold"
            android:textColor="#2196F3"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/discount" />

        <EditText
            android:id="@+id/editDiscount"
            android:layout_width="159dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/white"
            android:textSize="20dp" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/rgPayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/cash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/quicksand_bold"
            android:textColor="#2196F3"
            android:layout_marginLeft="16dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/cash" />

        <RadioButton
            android:id="@+id/payNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/quicksand_bold"
            android:textColor="#2196F3"
            android:textSize="20dp"
            android:layout_marginRight="16dp"
            android:textStyle="bold"
            android:text="@string/paynow" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/number"
            android:textColor="#2196F3"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:digits="1234567890"
            android:inputType="phone"
            android:hint="@string/ifUsingPaynow"
            android:textColorHint="@color/white"
            android:textColor="@color/black"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/split"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/split" />

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reset" />



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/total"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/total"
            android:textColor="#2196F3"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/editTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColorHint="@color/white"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:hint="@string/displayTotal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/eachPays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_bold"
            android:textColor="#2196F3"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/eachPays" />

        <TextView
            android:id="@+id/editEachPays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColorHint="@color/white"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:hint="@string/displayEachPays" />
    </LinearLayout>

</LinearLayout>